--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ body{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
 }
+html{
+    overflow-x: hidden;
+}
 /* styling menu icon */
 .nav-menu{
     border: none;
